--- a/Stroke_Prediction.ipynb
+++ b/Stroke_Prediction.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNjgN85NnuFz7eJDuam4uPT",
+      "authorship_tag": "ABX9TyMlQQxcudlA/7pM45rVjMnN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -103,7 +103,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 669
+          "height": 680
         },
         "id": "WSP_-b-jUg6z",
         "outputId": "47935ca6-8825-4cba-8972-bb9ed3d0d0db"
@@ -507,7 +507,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 504
+          "height": 514
         },
         "id": "oSnHSvRy2UFo",
         "outputId": "f702f3c7-4dbe-4452-c196-f0de7a51757a"
@@ -1141,7 +1141,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 559
+          "height": 560
         },
         "id": "e8yS3SKJafCm",
         "outputId": "2abbb61c-7174-4c20-c227-1ec6521fe35f"
@@ -1219,7 +1219,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 489
+          "height": 490
         },
         "id": "roJCmWbOhLfA",
         "outputId": "4d2308c8-4eb2-47ed-f40c-9ea4b824a655"
@@ -1255,18 +1255,18 @@
         "df_stroke_0 = df[df['stroke'] == 0]\n",
         "df_stroke_1 = df[df['stroke'] == 1]\n",
         "\n",
-        "# set up the figure with two subplots side by side\n",
+        "#set up the figure with two subplots side by side\n",
         "fig, (ax1, ax2) = plt.subplots(ncols=2, figsize=(12, 6))\n",
         "\n",
-        "# create the scatterplot for stroke=0\n",
+        "#scatterplot for stroke=0\n",
         "sns.scatterplot(ax=ax1, x='age', y='bmi', data=df_stroke_0, hue='stroke', palette='Set3')\n",
         "ax1.set_title('Stroke=0')\n",
         "\n",
-        "# create the scatterplot for stroke=1\n",
+        "#scatterplot for stroke=1\n",
         "sns.scatterplot(ax=ax2, x='age', y='bmi', data=df_stroke_1, hue='stroke', palette='Set1')\n",
         "ax2.set_title('Stroke=1')\n",
         "\n",
-        "# Set the y-limits of both subplots to be the same\n",
+        "#set y-limits for both plots to be the same scale\n",
         "ax1.set_ylim(0, 100)\n",
         "ax2.set_ylim(0, 100)\n",
         "\n",
@@ -1275,7 +1275,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 421
+          "height": 509
         },
         "id": "eMBidsdLteQU",
         "outputId": "3e51cd02-b1e9-4382-8619-738e70c14b23"
@@ -1362,7 +1362,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 489
+          "height": 490
         },
         "id": "o7TClkO8ocs5",
         "outputId": "e2acceb5-7b37-47c7-9f2a-2f1e5cde0c40"
