--- a/Stroke_Prediction.ipynb
+++ b/Stroke_Prediction.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOMGn8q4Jl/uGmtaEyIaD3O",
+      "authorship_tag": "ABX9TyNCVnnfb2RtfNdfOWJ/ccSY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1214,7 +1214,8 @@
         "sns.scatterplot(y ='bmi', x = 'age', data = df, hue = 'stroke', palette='Set2')\n",
         "plt.title('Scatter Plot of Age and BMI by Hypertension')\n",
         "plt.xlabel('Age')\n",
-        "plt.ylabel('BMI')"
+        "plt.ylabel('BMI')\n",
+        "#Interested to see what its like if i can separate 0 and 1 stroke"
       ],
       "metadata": {
         "colab": {
@@ -1357,7 +1358,6 @@
         "#group data by age and count number of strokes\n",
         "age_stroke_counts = df[df['stroke']==1].groupby(['age'])['stroke'].count().reset_index(name='count')\n",
         "\n",
-        "#create the line plot\n",
         "plt.plot(age_stroke_counts['age'], age_stroke_counts['count'])\n",
         "\n",
         "plt.xlabel('Age')\n",
@@ -1391,7 +1391,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Line plot here shows  the trend of stroke occurrence throughout different age"
+        "Line plot here shows  the trend of stroke occurrence throughout different age. It is observed that there is a spike on mid to late 50s, also found that a lot of ppl with stroke is on late 70s."
       ],
       "metadata": {
         "id": "MPJMVWKQh5No"
