--- a/Stroke_Prediction.ipynb
+++ b/Stroke_Prediction.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPe/URgySzZnRvHz9YGyveL",
+      "authorship_tag": "ABX9TyOWE/3zNbLfBpDep8qOCXdq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -81,7 +81,7 @@
         "- Deleted unnecessary columns.\n",
         "- Deleted duplicate rows.\n",
         "- Identified and addressed missing values.\n",
-        "-Identified and corrected inconsistencies in data for categorical values (i.e. Cat, cat, cats).\n",
+        "- Identified and corrected inconsistencies in data for categorical values (i.e. Cat, cat, cats).\n",
         "- Produced univariate visuals for the target and all features.\n",
         "- Identified outliers.\n",
         "- Clearly commented all of your cleaning steps and described any decisions you made."
@@ -1181,7 +1181,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##note\n",
+        "###note\n",
         "before transforming categorial to #, it was a small dataset like this"
       ],
       "metadata": {
@@ -1204,6 +1204,15 @@
       ],
       "metadata": {
         "id": "XTi_GlIjbIHY"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Scatter Plot"
+      ],
+      "metadata": {
+        "id": "UXXdoMLpJTWN"
       }
     },
     {
@@ -1307,6 +1316,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "###Bar Plot"
+      ],
+      "metadata": {
+        "id": "OWjoOqXDJWfa"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#create age groups\n",
@@ -1349,6 +1367,15 @@
       ],
       "metadata": {
         "id": "TyjQ3LEZ9b2l"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Line Plot"
+      ],
+      "metadata": {
+        "id": "d6o6Z2qgJYkD"
       }
     },
     {
