--- a/Stroke_Prediction.ipynb
+++ b/Stroke_Prediction.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN+YGUgj4K+EpwcV6FSEDv1",
+      "authorship_tag": "ABX9TyNsAdx+t7nOzBFX8iIkeZsF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,7 +52,7 @@
       "metadata": {
         "id": "bYHlCxBL0lK9"
       },
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -102,12 +102,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 669
+          "height": 681
         },
         "id": "WSP_-b-jUg6z",
-        "outputId": "4d3ba1af-2158-4b9b-c76a-6775f15f3bfa"
+        "outputId": "6e6a304f-0abd-40fa-8463-75fc6c0c23d2"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -163,7 +163,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-a2a7301e-4f57-41da-a216-1c196361eda2\">\n",
+              "  <div id=\"df-b4e4449d-5ca9-40ff-a9fb-cb049624cb6f\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -276,7 +276,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a2a7301e-4f57-41da-a216-1c196361eda2')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b4e4449d-5ca9-40ff-a9fb-cb049624cb6f')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -327,12 +327,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-a2a7301e-4f57-41da-a216-1c196361eda2 button.colab-df-convert');\n",
+              "          document.querySelector('#df-b4e4449d-5ca9-40ff-a9fb-cb049624cb6f button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-a2a7301e-4f57-41da-a216-1c196361eda2');\n",
+              "          const element = document.querySelector('#df-b4e4449d-5ca9-40ff-a9fb-cb049624cb6f');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -355,7 +355,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 2
         }
       ]
     },
@@ -368,7 +368,7 @@
       "metadata": {
         "id": "sXSMNIgczi1G"
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -382,9 +382,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "89RCCxQzzFNB",
-        "outputId": "48b453be-60d2-4da6-dcfa-e101782192db"
+        "outputId": "cd44fd19-f86d-49b0-c355-1d5f0936cca6"
       },
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -394,7 +394,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 4
         }
       ]
     },
@@ -409,9 +409,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7nRpSSuQzSJ3",
-        "outputId": "826e6685-0cb6-454d-f155-9d827711e2ba"
+        "outputId": "b7e7bc94-f418-4687-bc25-3e6f38aa8e83"
       },
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -432,7 +432,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 5
         }
       ]
     },
@@ -452,9 +452,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cBBGXC9g1ZaL",
-        "outputId": "e33cdb51-ae90-466d-e067-3f96e94ea72d"
+        "outputId": "8ee44089-f29f-4ab8-86b9-33579f684f78"
       },
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -506,12 +506,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 504
+          "height": 515
         },
         "id": "oSnHSvRy2UFo",
-        "outputId": "e658b6c8-8531-4082-848a-65c90078989e"
+        "outputId": "7edb60db-713d-45ed-ffc9-263c28a1bb7e"
       },
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -550,7 +550,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-d397bc6d-2c2e-4da6-aa7c-0c61e552fc3b\">\n",
+              "  <div id=\"df-e27dcd38-1d3f-49b9-8953-e572af54b719\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -613,7 +613,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d397bc6d-2c2e-4da6-aa7c-0c61e552fc3b')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e27dcd38-1d3f-49b9-8953-e572af54b719')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -664,12 +664,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-d397bc6d-2c2e-4da6-aa7c-0c61e552fc3b button.colab-df-convert');\n",
+              "          document.querySelector('#df-e27dcd38-1d3f-49b9-8953-e572af54b719 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-d397bc6d-2c2e-4da6-aa7c-0c61e552fc3b');\n",
+              "          const element = document.querySelector('#df-e27dcd38-1d3f-49b9-8953-e572af54b719');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -692,7 +692,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 7
         }
       ]
     },
@@ -725,7 +725,7 @@
       "metadata": {
         "id": "wK9L3FTSEc26"
       },
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -757,7 +757,7 @@
       "metadata": {
         "id": "cGZnClBDTaLK"
       },
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -780,9 +780,9 @@
           "height": 433
         },
         "id": "wzrgx8DbRfN6",
-        "outputId": "53cf0c7d-4d94-4646-8edf-120484494853"
+        "outputId": "fdbb1040-360c-4649-dbc5-5ece1b6b4d87"
       },
-      "execution_count": 11,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "display_data",
@@ -819,9 +819,9 @@
           "height": 839
         },
         "id": "EeWOdklhSOVd",
-        "outputId": "f3802cfa-d5d3-4649-f5ca-9bca175a333e"
+        "outputId": "1d2384bc-b9c3-4624-aa2d-966f6fabca7f"
       },
-      "execution_count": 12,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "display_data",
@@ -862,9 +862,9 @@
           "height": 1000
         },
         "id": "KRNcjbpUuPWR",
-        "outputId": "3a9391ef-aa83-47f3-9bd5-51b59952fafe"
+        "outputId": "ef88f567-222b-4c17-c2d9-ee2e40033fa3"
       },
-      "execution_count": 13,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "display_data",
@@ -913,9 +913,9 @@
           "height": 1000
         },
         "id": "PxF-WEc8WkSn",
-        "outputId": "614b26e0-7a44-4452-e58e-baa9956ac9b8"
+        "outputId": "dccb20c6-9fc2-4bce-c5bf-642da953c053"
       },
-      "execution_count": 14,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "display_data",
@@ -990,9 +990,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eoixx1wL8wX_",
-        "outputId": "f868108d-b1ee-48e3-df2c-1bc070547ab7"
+        "outputId": "1f84b607-3d99-40f3-d5e2-b963c53cdc3f"
       },
-      "execution_count": 15,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1004,7 +1004,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 14
         }
       ]
     },
@@ -1019,9 +1019,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7VR-UaK2_EXX",
-        "outputId": "29256c84-2dda-447e-b512-03da29599123"
+        "outputId": "cca2c986-511e-4cdd-d83f-ab3f2b9136d5"
       },
-      "execution_count": 16,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1033,7 +1033,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 15
         }
       ]
     },
@@ -1048,9 +1048,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JZp-nJclAyNm",
-        "outputId": "f02328d1-5cc5-4275-db2c-b8d736636d9b"
+        "outputId": "589bd127-dc9e-44d6-9d83-cc99abd7e038"
       },
-      "execution_count": 17,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1065,7 +1065,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 16
         }
       ]
     },
@@ -1080,9 +1080,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "q-Cz43WQ_qwQ",
-        "outputId": "b1432f20-264a-4a76-c682-18a22ba52e9e"
+        "outputId": "5f3007ec-e18a-4ea0-95f5-4c1c61e8e96d"
       },
-      "execution_count": 18,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1094,7 +1094,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 17
         }
       ]
     },
@@ -1109,9 +1109,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hi73pseoAFsZ",
-        "outputId": "d99c8e42-dc95-4983-b6fc-883aa46d8836"
+        "outputId": "e4564df9-268a-4f20-ff72-2aabbc0f1050"
       },
-      "execution_count": 19,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1125,7 +1125,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 18
         }
       ]
     },
@@ -1140,12 +1140,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 551
+          "height": 560
         },
         "id": "e8yS3SKJafCm",
-        "outputId": "d5b2884c-4dc0-41d5-9bc0-795d6d7c3ee6"
+        "outputId": "7b7ebc03-e487-4a40-e65c-f0967d0f77b9"
       },
-      "execution_count": 20,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1155,7 +1155,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 19
         },
         {
           "output_type": "display_data",
@@ -1228,12 +1228,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 489
+          "height": 490
         },
         "id": "roJCmWbOhLfA",
-        "outputId": "94639ad0-3905-4a89-b04b-cece3f809f54"
+        "outputId": "d35460d2-08a6-4732-85ba-63e1e769f379"
       },
-      "execution_count": 21,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1243,7 +1243,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 20
         },
         {
           "output_type": "display_data",
@@ -1284,12 +1284,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 359
+          "height": 564
         },
         "id": "eMBidsdLteQU",
-        "outputId": "ade484fa-cdb4-4320-eb7f-3228fc3ee5f1"
+        "outputId": "ce203a9f-2fcb-42cd-cff7-884250fd202c"
       },
-      "execution_count": 22,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1344,9 +1344,9 @@
           "height": 472
         },
         "id": "A1dlSMVN9BZp",
-        "outputId": "05785e1a-9902-4ab5-ae8e-6fb65f6fedda"
+        "outputId": "81c52dd1-61b6-43ce-e756-f4ff94c989b7"
       },
-      "execution_count": 23,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1396,7 +1396,7 @@
         "\n",
         "#get age with the minimum stroke count\n",
         "min_count = age_stroke_counts['count'].min()\n",
-        "min_count_age = age_stroke_counts.loc[age_stroke_counts['count'] == min_count, 'age'].iloc[0]\n",
+        "min_count_age = age_stroke_counts[age_stroke_counts['count'] == min_count]['age'].values[0]\n",
         "plt.annotate(f'Minimum at {min_count_age} years old', xy=(min_count_age, min_count), xytext=(min_count_age+10, min_count-10), \n",
         "             arrowprops=dict(facecolor='black', shrink=0.05))\n",
         "\n",
@@ -1409,10 +1409,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 520
+          "height": 638
         },
         "id": "icrE2FoMGIHh",
-        "outputId": "86fd3420-386f-41ed-addc-c415bf72155e"
+        "outputId": "c50270db-fa87-4367-f596-8686fdea78d8"
       },
       "execution_count": 24,
       "outputs": [
