--- a/Stroke_Prediction.ipynb
+++ b/Stroke_Prediction.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM//YfDPNavXIOAOph4XUK7",
+      "authorship_tag": "ABX9TyNjjxH2lzFXSJwUo9ijfGXB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3888,6 +3888,15 @@
           "execution_count": 42
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "From the result of test F1, smote logistic regression, oversampling XGBooster and smote KNN each has the best performance among each category."
+      ],
+      "metadata": {
+        "id": "St1LUr3XX9VX"
+      }
     },
     {
       "cell_type": "code",
