--- a/Stroke_Prediction_with_PCA_feature_engineering_bring_back.ipynb
+++ b/Stroke_Prediction_with_PCA_feature_engineering_bring_back.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNnDsKxSx848KJsCATb1QnU",
+      "authorship_tag": "ABX9TyOjYjAJoMIl9YGPVU6rdYOL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1458,11 +1458,13 @@
         "\n",
         "1. Making preprocessor.\n",
         "\n",
-        "2. Finding the best resampling method between oversampling and SMOTE on each machine learning models. The reason I chooe oversampling and SMOTE is because I need more data to study, rather than downsizing an abundant data possibly lost majority of information. \n",
+        "2. Finding the best resampling method between oversampling and SMOTE on each machine learning models. The reason I chooe oversampling and SMOTE is because I need more data to study, rather than downsizing an abundant data possibly lost majority of information. PCA will also be added to compare.\n",
         "\n",
         "3. Hyptertuning each machine learning models that has the best resampling method.\n",
         "\n",
-        "4. All models are compared with a custom function I wrote for classification problem."
+        "4. All models are compared with a custom function I wrote for classification problem.\n",
+        "\n",
+        "5. Creating a feature engineered data and use the best model to measure, see if feature engineering improves metric."
       ],
       "metadata": {
         "id": "tUefzNCLsYhF"
@@ -1673,7 +1675,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##Ideitifying Resampling methods work best for Machine Learning Models "
+        "##Default and Resampling Machine Learning Models"
       ],
       "metadata": {
         "id": "74tb64AYVdQP"
@@ -8866,7 +8868,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "1. From data explainatory, it is observed that people with following traits could have stroke:\n",
+        "1. From explainatory data, it is observed that following traits could lead to stroke:\n",
         "\n",
         "- age over 50\n",
         "- female\n",
@@ -8875,13 +8877,13 @@
         "- working in private sector\n",
         "- never smoked\n",
         "\n",
-        "2. Whilst applying machine learning on this dataset, the goal is to not only avoid type II error as much as possible but also have as many true positives as many as we can predict. Through the results above, it is observed that \n",
+        "2. Whilst applying machine learning on this dataset, the goal is to not only predict as many true positive (TP) but also avoid type II error as much as possible. Through the results above, it is observed that \n",
         "\n",
         "- Resampling method makes impact as all four models has TP>.5 are resampled.\n",
         "\n",
-        "- Tuning does not make impacts as tuned models have same or lower TP.\n",
+        "- SMOTE Logistic Regresion, tuned SMOTE Logistic Regresion and tuned oversampling Logistic Regresioncan can identify more than 70% of TP. These models are more likely to be used and applied in the real world.\n",
         "\n",
-        "- SMOTE Logistic Regresion, tuned SMOTE Logistic Regresion and tuned oversampling Logistic Regresioncan can identify more than 70% of true positives (with stroke). These models are more likely to be used and applied in the real world.\n",
+        "- Model tuning does not make much impact as tuned models have same or lower TP.\n",
         "\n",
         "3. Utilizing SMOTE Logistic Regresion and looking back to the original data where stroke are both actually and predcited happened, we can reduce the dataset to less than 200 rows. In fact, this will be a good starting point to reinforce our model by getting a better description of our data.\n",
         "\n",
