--- a/Stroke_Prediction_with_PCA_feature_engineering_bring_back.ipynb
+++ b/Stroke_Prediction_with_PCA_feature_engineering_bring_back.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN2PIS/xvHnNpMHZ1zrqQom",
+      "authorship_tag": "ABX9TyMn6Ve3QoeT+oyKgUI6f9U+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -8864,7 +8864,9 @@
         "- working in private sector\n",
         "- never smoked\n",
         "\n",
-        "2. Whilst applying machine learning on this dataset, the goal is to not only predict as many true positive (TP) but also avoid type II error as much as possible. Through the results above, it is observed that \n",
+        "However, it does not suggest that single 30 yr old male who smoke two packs a day will not get stroke. In fact, these traits is describing the stroke at a broader sense. For instance, female have higher chance to get stroke and it could be related to pregancy or longer life. Working in a private sector at downtown big cities would probably generate more stress and imbalance work and sleep time, which ultimately cause bad health then the risk of stroke. Not to mention, CDC has asserted that [secondhand smoke increases the risk for stroke by 20−30%.](https://www.cdc.gov/tobacco/campaign/tips/diseases/heart-disease-stroke.html#:~:text=Secondhand%20smoke%20increases%20the%20risk%20for%20stroke%20by,increase%20your%20risk%20of%20having%20a%20heart%20attack.)\n",
+        "\n",
+        "2. Whilst applying machine learning on this dataset, the goal is to not only predict as many true positive (TP) but also avoid type II error as much as possible. From results above, it is observed that \n",
         "\n",
         "- Resampling method makes impact as all four models has TP>.5 are resampled.\n",
         "\n",
@@ -8872,18 +8874,18 @@
         "\n",
         "- Model tuning does not make much impact as tuned models have same or lower TP.\n",
         "\n",
-        "3. Utilizing SMOTE Logistic Regresion and looking back to the original data where stroke are both actually and predcited happened, we can reduce the dataset to less than 200 rows. In fact, this will be a good starting point to reinforce our model by getting a better description of our data.\n",
+        "3. Utilizing our best model, SMOTE Logistic Regresion, and looking back to the original data where stroke are both actually and predcited happened, we can reduce the dataset to less than 200 rows. In fact, this will be a good starting point to reinforce our model by getting a better description of our data.\n",
         "\n",
-        "4. Featured engineering strategy is applied by creating one extra column 'high_glucose'. It has the similiar TP .72 as without feature engineering.\n",
+        "4. Featured engineering strategy is applied by creating two extra column 'high_glucose'. It has the similiar TP on our best model as without feature engineering.\n",
         "\n",
         "\n",
         "5. For comparison purposes, PCAs were applied and compared but it did not make significant impact on metrics performance. Maybe due to a relatively small dataset.\n",
         "\n",
         "6. After having a reliable model, we can make various recommendations upon different audiences. For instance:\n",
         "\n",
-        "- General public: Be cautious on potential strok symptom if you fit the traits.\n",
+        "- General public: Be cautious on potential strok symptom if you fit the traits. Extensively, maintain a healthy lifestyle. \n",
         "\n",
-        "- Stakeholders of pharmaceutical companies: custom product development and marketing strategies upon different traits.\n",
+        "- Stakeholders of pharmaceutical companies: custom product development and marketing strategies upon different traits. Develop educational programs to raise awareness about the risk factors for stroke, and how to prevent it.\n",
         "\n",
         "\n"
       ],
