--- a/Stroke_Prediction_with_PCA_feature_engineering_bring_back.ipynb
+++ b/Stroke_Prediction_with_PCA_feature_engineering_bring_back.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMilD6ikkULxnrhY6LdF9e5",
+      "authorship_tag": "ABX9TyPeLmhkXazTaZft9Rf+R1hb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,7 +59,7 @@
       "metadata": {
         "id": "bYHlCxBL0lK9"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -114,7 +114,7 @@
         "id": "WSP_-b-jUg6z",
         "outputId": "9a7a3cbb-d2ab-4837-824f-8d85b640dde1"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -375,7 +375,7 @@
       "metadata": {
         "id": "sXSMNIgczi1G"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -391,7 +391,7 @@
         "id": "89RCCxQzzFNB",
         "outputId": "5451166e-c81e-4835-aafa-dc6a202e7e52"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -418,7 +418,7 @@
         "id": "7nRpSSuQzSJ3",
         "outputId": "d493a539-fe3c-43f7-c776-4df8cf3e00a1"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -461,7 +461,7 @@
         "id": "cBBGXC9g1ZaL",
         "outputId": "ec484748-e99d-46bf-f55a-cf4d63bbc285"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -518,7 +518,7 @@
         "id": "oSnHSvRy2UFo",
         "outputId": "0ddd036f-56f2-4f03-a68d-a3978dffdf35"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -732,7 +732,7 @@
       "metadata": {
         "id": "wK9L3FTSEc26"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -764,7 +764,7 @@
       "metadata": {
         "id": "cGZnClBDTaLK"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -789,7 +789,7 @@
         "id": "wzrgx8DbRfN6",
         "outputId": "cbc05ec1-4196-4975-983e-31bab845e7cd"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -828,7 +828,7 @@
         "id": "EeWOdklhSOVd",
         "outputId": "9da1e31e-180c-4c1f-dd5d-0286aea694b9"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -871,7 +871,7 @@
         "id": "KRNcjbpUuPWR",
         "outputId": "c2ec23a4-24ca-4998-d279-9ccb75781213"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -922,7 +922,7 @@
         "id": "PxF-WEc8WkSn",
         "outputId": "3aa5e441-da5b-4320-d395-52d1e0877671"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1015,7 +1015,7 @@
         "id": "eoixx1wL8wX_",
         "outputId": "6cea305a-0f76-40cf-eb56-27c5d4a17909"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1044,7 +1044,7 @@
         "id": "7VR-UaK2_EXX",
         "outputId": "804593fa-a1fa-4f7f-8aa0-e8a8ddba95a9"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1073,7 +1073,7 @@
         "id": "JZp-nJclAyNm",
         "outputId": "ff846463-1da8-4b86-fd5e-15a9b6ed4f78"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1105,7 +1105,7 @@
         "id": "q-Cz43WQ_qwQ",
         "outputId": "789c0478-33fd-4eb8-e9c9-aed973aa9798"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1134,7 +1134,7 @@
         "id": "hi73pseoAFsZ",
         "outputId": "8342feae-88d6-47c8-dbd0-79e0f994390e"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1168,7 +1168,7 @@
         "id": "e8yS3SKJafCm",
         "outputId": "bc67cc9c-5769-4ff6-ac97-583470476919"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1204,7 +1204,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##Multivariate visualizations"
+        "##Multivariate visualizations\n",
+        "\n",
+        "I intend to explore more with age since it has the gihest correlation with stroke."
       ],
       "metadata": {
         "id": "XTi_GlIjbIHY"
@@ -1237,7 +1239,7 @@
         "id": "roJCmWbOhLfA",
         "outputId": "eb4cf449-5026-4d83-b8d7-07bdc6a1dd45"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1293,7 +1295,7 @@
         "id": "eMBidsdLteQU",
         "outputId": "3edbcfa2-1ae2-42c0-a7db-2219e993e411"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1346,7 +1348,7 @@
         "id": "A1dlSMVN9BZp",
         "outputId": "9b46c7d2-9e93-47ef-bab7-3e29034491b1"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
