--- a/Stroke_Prediction_with_PCA_feature_engineering_bring_back.ipynb
+++ b/Stroke_Prediction_with_PCA_feature_engineering_bring_back.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPeLmhkXazTaZft9Rf+R1hb",
+      "authorship_tag": "ABX9TyP0wrVY9qsthhLM4O7iJEE7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1206,7 +1206,7 @@
       "source": [
         "##Multivariate visualizations\n",
         "\n",
-        "I intend to explore more with age since it has the gihest correlation with stroke."
+        "I intend to explore more with age since it has the highest correlation with stroke."
       ],
       "metadata": {
         "id": "XTi_GlIjbIHY"
